--- a/index.html
+++ b/index.html
@@ -11,7 +11,13 @@
     <title>Graeme Holliday</title>
   </head>
   <body>
-    <h1>GRAEME HOLLIDAY</h1>
+	<div class="container">
+		<div class="col"></div>
+		<div class="col">
+			<h1>GRAEME HOLLIDAY</h1>
+		</div>
+		<div class="col"></div>
+	</div>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
