finish basic version

--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -11,15 +10,121 @@
     <title>Graeme Holliday</title>
   </head>
   <body>
-	<div class="container">
-		<div class="col"></div>
-		<div class="col">
-			<h1>GRAEME HOLLIDAY</h1>
+	<nav class="navbar sticky-top navbar-expand-md navbar-light bg-light">
+		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+			<span class="navbar-toggler-icon"></span>
+		</button>
+		<div class="collapse navbar-collapse w-100 order-1 order-md-0 dual-collapse2" id="navbarSupportedContent">
+			<ul class="navbar-nav mr-auto">
+				<li class="nav-item dropdown active">
+					<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">MENU</a>
+					<div class="dropdown-menu" aria-labelledby="navbarDropdown">
+						<a class="dropdown-item" href="#experience">Experience</a>
+						<a class="dropdown-item" href="#skills">Skills</a>
+						<a class="dropdown-item" href="https://drive.google.com/open?id=1Rxpvqdqju2nvH1M5eyjxJiTbRQIolptp">Resume</a>
+						<a class="dropdown-item" href="mailto:holl4578@vandals.uidaho.edu">Contact</a>
+					</div>
+				</li>
+			</ul>
 		</div>
-		<div class="col"></div>
+		<div class="mx-auto order-0">
+			<div class="navbar-brand mx-auto">GRAEME HOLLIDAY</div>
+		</div>
+		<div class="navbar-collapse collapse w-100 order-3 dual-collapse2" id="navbarSupportedContent">
+			<ul class="navbar-nav ml-auto">
+				<li class="nav-item">
+					<a class="nav-link" href="http://www.github.com/graeme22">
+						<img src="github.png" alt="GitHub"/>
+					</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="http://www.linkedin.com/in/graeme-holliday-932673165/">
+						<img src="linkedin.png" alt="LinkedIn"/>
+					</a>
+				</li>
+			</ul>
+		</div>
+	</nav>
+
+	<div class="container">
+		<br>
+		<div class="row">
+			<div class="col-lg-2"></div>
+			<div class="col-lg-8">
+				<div style="padding-top:70px" class="media jumbotron">
+					<div class="media-left d-sm-none d-md-block d-none">
+						<img class="media-object" src="me.jpg"/>
+					</div>
+					<div style="padding-left:10px" class="media-body">
+						<h1 class="text-center">Welcome!</h1>
+						<p>
+							My name is Graeme Holliday. I'm a junior at the <a href="http://www.uidaho.edu">University of Idaho</a> studying Computer Science with minors in Mathematics and Spanish.
+							<br><br>
+							This website is meant to be a resource for anyone looking to get a quick sense of who I am and what I am capable of.
+						</p>
+					</div>
+				</div>
+				<br>
+				<h2 style="padding-top:70px" class="text-center" id="experience">Experience</h2>
+				<ul class="list-group">
+					<li class="list-group-item">
+						<strong>Programming Lead at <a href="http://www.polymorphicgames.com/">Polymorphic Game Studio</a></strong>: 
+						Designing, programming, and testing a mobile game for Android and iOS using C# and the Unity Engine. 
+						<span class="badge badge-warning">Current</span>
+					</li>
+					<li class="list-group-item">
+						<strong>Camp counselor at <a href="http://www.ofcr.org/">OFCR summer camp</a></strong>: 
+						Teaching, leading, and taking care of kids from 4th to 12th grade.
+					</li>
+					<li class="list-group-item">
+						<strong>Deli clerk at South Lake Tahoe Grocery Outlet</strong>: Unpacking and sorting goods.
+					</li>
+					<li class="list-group-item">
+						<strong>Assistant at Franklin's Famous Cheesesteak Company</strong>: Cooking, cleaning, and taking orders.
+					</li>
+				</ul>
+				<br>
+				<h2 style="padding-top:70px" class="text-center" id="skills">Skills</h2>
+				<div style="padding-bottom:70px" class="container">
+					<div class="row">
+						<div class="col-lg-5 card card-body bg-dark">
+							<h5 style="color:#FFFFFF" class="card-title">
+							Programming Languages
+							</h5>
+							<ul class="list-group card-text">
+								<li class="list-group-item">Java</li>
+								<li class="list-group-item">C</li>
+								<li class="list-group-item">C++</li>
+								<li class="list-group-item">C#</li>
+								<li class="list-group-item">Python</li>
+								<li class="list-group-item">HTML/CSS</li>
+								<li class="list-group-item">Javascript/Typescript</li>
+								<li class="list-group-item">Swift</li>
+								<li class="list-group-item">Objective-C</li>
+							</ul>
+						</div>
+						<div class="col-lg-2"></div>
+						<div class="col-lg-5 card card-body bg-dark">
+							<h5 style="color:#FFFFFF" class="card-title">
+							Miscellaneous Skills
+							</h5>
+							<ul class="list-group card-text">
+								<li class="list-group-item">Ubuntu Linux</li>
+								<li class="list-group-item">Git/GitHub</li>
+								<li class="list-group-item">Web Development <span class="badge badge-primary">Bootstrap</span></li>
+								<li class="list-group-item">Game Development <span class="badge badge-primary">Unity</span></li>
+								<li class="list-group-item">Mobile Development <span class="badge badge-primary">Android</span> <span class="badge badge-secondary">iOS</span></li>
+								<li class="list-group-item">Spanish <span class="badge badge-warning">Conversant</span></li>
+								<li class="list-group-item">Communication</li>
+								<li class="list-group-item">Problem-solving</li>
+							</ul>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
 	</div>
 
-    <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
