--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 					<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">MENU</a>
 					<div class="dropdown-menu" aria-labelledby="navbarDropdown">
 						<a class="dropdown-item" href="#experience">Experience</a>
+						<a class="dropdown-item" href="#work">Sample Work</a>
 						<a class="dropdown-item" href="#skills">Skills</a>
 						<a class="dropdown-item" href="https://drive.google.com/open?id=1Rxpvqdqju2nvH1M5eyjxJiTbRQIolptp">Resume</a>
 						<a class="dropdown-item" href="mailto:holl4578@vandals.uidaho.edu">Contact</a>
@@ -64,7 +65,6 @@
 						</p>
 					</div>
 				</div>
-				<br>
 				<h2 style="padding-top:70px" class="text-center" id="experience">Experience</h2>
 				<ul class="list-group">
 					<li class="list-group-item">
@@ -74,7 +74,7 @@
 					</li>
 					<li class="list-group-item">
 						<strong>Camp counselor at <a href="http://www.ofcr.org/">OFCR summer camp</a></strong>: 
-						Teaching, leading, and taking care of kids from 4th to 12th grade.
+						Teaching, leading, and looking after kids from 4th to 12th grade.
 					</li>
 					<li class="list-group-item">
 						<strong>Deli clerk at South Lake Tahoe Grocery Outlet</strong>: Unpacking and sorting goods.
@@ -83,7 +83,23 @@
 						<strong>Assistant at Franklin's Famous Cheesesteak Company</strong>: Cooking, cleaning, and taking orders.
 					</li>
 				</ul>
-				<br>
+
+				<h2 style="padding-top:70px" class="text-center" id="work">Sample Work</h2>
+				<ul class="list-group">
+					<li class="list-group-item">
+						<strong>Java application design</strong>: <a href="http://github.com/Graeme22/atlantis-mod">http://github.com/Graeme22/atlantis-mod</a>
+					</li>
+					<li class="list-group-item">
+						<strong>C# and Unity game design</strong>: <a href="http://github.com/Graeme22/Sisyphus">http://github.com/Graeme22/Sisyphus</a>
+					</li>
+					<li class="list-group-item">
+						<strong>C# and Unity game design</strong>: <a href="http://www.polymorphicgames.com">Project Spectre</a> <span class="badge badge-warning">WIP</span>
+					</li>
+					<li class="list-group-item">
+						<strong>Web design using HTML/CSS, Bootstrap, and Javascript</strong>: This website!
+					</li>
+				</ul>
+
 				<h2 style="padding-top:70px" class="text-center" id="skills">Skills</h2>
 				<div style="padding-bottom:70px" class="container">
 					<div class="row">
@@ -121,6 +137,7 @@
 						</div>
 					</div>
 				</div>
+
 			</div>
 		</div>
 	</div>
