update w/ new job

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 						<a class="dropdown-item" href="#experience">Experience</a>
 						<a class="dropdown-item" href="#work">Sample Work</a>
 						<a class="dropdown-item" href="#skills">Skills</a>
+						<a class="dropdown-item" href="#papers">Publications</a>
 						<a class="dropdown-item" href="mailto:holl4578@vandals.uidaho.edu">Contact</a>
 					</div>
 				</li>
@@ -67,11 +68,15 @@
 				<h2 style="padding-top:70px" class="text-center" id="experience">Experience</h2>
 				<ul class="list-group">
 					<li class="list-group-item">
+						<strong>Intern at <a href="http://inl.gov/">Idaho National Laboratory</a></strong>:
+						Designing neural network architectures to classify and quantify radioactive isotopes using both supervised and unsupervised learning.
+						<span class="badge badge-info">current</span>
+					</li>
+					<li class="list-group-item">
 						<strong>Intern at <a href="http://inl.gov/">Idaho National Laboratory</a></strong>: 
 						Using <a href="https://pytorch.org/">PyTorch</a> and <a href="https://www.tensorflow.org/">Tensorflow</a> to improve upon existing HPC job scheduling algorithms with deep reinforcement learning.
 						<br>An actor-critic model was trained through decentralized distributed proximal policy optimization.
 						<br>Among other tools, I used <a href="https://github.com/horovod/horovod">Horovod</a>, <a href="https://www.open-mpi.org/">OpenMPI</a>, <a href="https://github.com/ray-project/ray">Ray</a>, and <a href="https://about.gitlab.com/">GitLab</a>.
-						<span class="badge badge-info">current</span>
 					</li>
 					<li class="list-group-item">
 						<strong>Programming Lead at <a href="http://www.polymorphicgames.com/">Polymorphic Game Studio</a></strong>: 
@@ -79,9 +84,6 @@
 					</li>
 					<li class="list-group-item">
 						<strong>Deli clerk at South Lake Tahoe Grocery Outlet</strong>: Unpacking and sorting goods.
-					</li>
-					<li class="list-group-item">
-						<strong>Assistant at Franklin's Famous Cheesesteak Company</strong>: Cooking, cleaning, and taking orders.
 					</li>
 				</ul>
 
@@ -94,7 +96,7 @@
 						<strong>C# and Unity game design</strong>: <a href="http://github.com/Graeme22/Sisyphus">http://github.com/Graeme22/Sisyphus</a>
 					</li>
 					<li class="list-group-item">
-						<strong>C# and Unity game design</strong>: <a href="http://www.polymorphicgames.com">Project Spectre</a> <span class="badge badge-info">work in progress</span>
+						<strong>C# and Unity game design</strong>: <a href="http://www.polymorphicgames.com">Project Spectre</a> <span class="badge badge-info">in progress</span>
 					</li>
 					<li class="list-group-item">
 						<strong>Web design using HTML/CSS, Bootstrap, and Javascript</strong>: This website!
@@ -139,7 +141,10 @@
 						</div>
 					</div>
 				</div>
-
+				<h2 style="padding-top:70px" class="text-center" id="papers">Publications</h2>
+				<div style="padding-bottom:70px" class="container">
+					<span class="badge badge-info">in progress</span>
+				</div>
 			</div>
 		</div>
 	</div>
