update job desc

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 				<ul class="list-group">
 					<li class="list-group-item">
 						<strong>Intern at <a href="http://inl.gov/">Idaho National Laboratory</a></strong>:
-						Designing neural network architectures to classify and quantify radioactive isotopes using both supervised and unsupervised learning.
+						Designing neural network architectures to classify and quantify radioactive isotopes using a variety of models, including reinforcement learning, transformers, CNNs, and dense networks; optimizing those models for low-power inference.
 						<span class="badge badge-info">current</span>
 					</li>
 					<li class="list-group-item">
