--- a/index.html
+++ b/index.html
@@ -11,23 +11,6 @@
   </head>
   <body>
 	<nav class="navbar sticky-top navbar-expand-md navbar-light bg-light">
-		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-			<span class="navbar-toggler-icon"></span>
-		</button>
-		<div class="collapse navbar-collapse w-100 order-1 order-md-0 dual-collapse2" id="navbarSupportedContent">
-			<ul class="navbar-nav mr-auto">
-				<li class="nav-item dropdown active">
-					<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">MENU</a>
-					<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-						<a class="dropdown-item" href="#experience">Experience</a>
-						<a class="dropdown-item" href="#work">Sample Work</a>
-						<a class="dropdown-item" href="#skills">Skills</a>
-						<a class="dropdown-item" href="#papers">Publications</a>
-						<a class="dropdown-item" href="mailto:holl4578@vandals.uidaho.edu">Contact</a>
-					</div>
-				</li>
-			</ul>
-		</div>
 		<div class="mx-auto order-0">
 			<div class="navbar-brand mx-auto">GRAEME HOLLIDAY</div>
 		</div>
@@ -90,10 +73,13 @@
 				<h2 style="padding-top:70px" class="text-center" id="work">Sample Work</h2>
 				<ul class="list-group">
 					<li class="list-group-item">
-						<strong>Java application design</strong>: <a href="http://github.com/Graeme22/atlantis-mod">http://github.com/Graeme22/atlantis-mod</a>
+						<strong>Distillation training for vision transformer models</strong>: <a href="http://github.com/Graeme22/DistillableVisionTransformer">distillable-vision-transformer</a>
 					</li>
 					<li class="list-group-item">
-						<strong>C# and Unity game design</strong>: <a href="http://github.com/Graeme22/Sisyphus">http://github.com/Graeme22/Sisyphus</a>
+						<strong>Custom compiler for a C-like language</strong>: <a href="http://github.com/Graeme22/cminus">cminus</a>
+					</li>
+					<li class="list-group-item">
+						<strong>Java application design</strong>: <a href="http://github.com/Graeme22/atlantis-mod">atlantis-mod</a>
 					</li>
 					<li class="list-group-item">
 						<strong>C# and Unity game design</strong>: <a href="http://www.polymorphicgames.com">Project Spectre</a> <span class="badge badge-info">in progress</span>
@@ -142,9 +128,16 @@
 					</div>
 				</div>
 				<h2 style="padding-top:70px" class="text-center" id="papers">Publications</h2>
-				<div style="padding-bottom:70px" class="container">
-					<span class="badge badge-info">in progress</span>
-				</div>
+				<ul class="list-group">
+					<li class="list-group-item">
+						<strong>Far-Edge Cluster Computing: Gamma Spectroscopy on SpaceBorne 2</strong>
+						<span class="badge badge-info">in progress</span>
+					</li>
+					<li class="list-group-item">
+						<strong>Deep Reinforcement Learning for Superior Cluster Job Scheduling</strong>
+						<span class="badge badge-info">in progress</span>
+					</li>
+				</ul>
 			</div>
 		</div>
 	</div>
