update, clean up skills columns on mobile

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 				<h2 style="padding-top:70px" class="text-center" id="skills">Skills</h2>
 				<div style="padding-bottom:70px" class="container">
 					<div class="row">
-						<div class="col-lg-5 card card-body bg-dark">
+						<div class="col-lg-5 card card-body bg-dark mb-3">
 							<h5 style="color:#FFFFFF" class="card-title">
 							Programming Languages
 							</h5>
@@ -109,7 +109,7 @@
 							</ul>
 						</div>
 						<div class="col-lg-2"></div>
-						<div class="col-lg-5 card card-body bg-dark">
+						<div class="col-lg-5 card card-body bg-dark mb-3">
 							<h5 style="color:#FFFFFF" class="card-title">
 							Libraries & Tools
 							</h5>
@@ -129,6 +129,10 @@
 				</div>
 				<h2 style="padding-top:70px" class="text-center" id="papers">Publications</h2>
 				<ul class="list-group">
+					<li class="list-group-item">
+						<strong>Obtaining High-purity Gamma Spectra using NaI Scintillators</strong>
+						<span class="badge badge-info">in progress</span>
+					</li>
 					<li class="list-group-item">
 						<strong>Far-Edge Cluster Computing: Gamma Spectroscopy on SpaceBorne 2</strong>
 						<span class="badge badge-info">in progress</span>
