--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
 					<div style="padding-left:10px" class="media-body">
 						<h1 class="text-center">Welcome!</h1>
 						<p>
-							My name is Graeme Holliday. I'm a senior at the <a href="http://www.uidaho.edu">University of Idaho</a> studying Computer Science with minors in Mathematics and Spanish. <span class="badge badge-info">conversant</span>
+							My name is Graeme Holliday. I just graduated from the <a href="http://www.uidaho.edu">University of Idaho</a> with a bachelor's in  Computer Science with minors in Mathematics and Spanish. <span class="badge badge-info">conversant</span>
 							<br><br>
-							This website is meant to be a resource for anyone looking to get a quick sense of who I am and what I am capable of.
+							This website is meant to be a resource for anyone looking to get a quick sense of who I am and what I am capable of. You can also check out my server at <a href="https://graemeholliday.com">graemeholliday.com</a>!
 						</p>
 					</div>
 				</div>
@@ -52,21 +52,18 @@
 				<ul class="list-group">
 					<li class="list-group-item">
 						<strong>Intern at <a href="http://inl.gov/">Idaho National Laboratory</a></strong>:
-						Designing neural network architectures to classify and quantify radioactive isotopes using a variety of models, including reinforcement learning, transformers, CNNs, and dense networks; optimizing those models for low-power inference.
+						Designing neural network architectures to classify and quantify radioactive isotopes using a variety of models; optimizing those models for low-power inference; tackling existing barriers to effective automatic gamma spectroscopy.
 						<span class="badge badge-info">current</span>
 					</li>
 					<li class="list-group-item">
 						<strong>Intern at <a href="http://inl.gov/">Idaho National Laboratory</a></strong>: 
 						Using <a href="https://pytorch.org/">PyTorch</a> and <a href="https://www.tensorflow.org/">Tensorflow</a> to improve upon existing HPC job scheduling algorithms with deep reinforcement learning.
 						<br>An actor-critic model was trained through decentralized distributed proximal policy optimization.
-						<br>Among other tools, I used <a href="https://github.com/horovod/horovod">Horovod</a>, <a href="https://www.open-mpi.org/">OpenMPI</a>, <a href="https://github.com/ray-project/ray">Ray</a>, and <a href="https://about.gitlab.com/">GitLab</a>.
+						<br>Among other tools, I used <a href="https://github.com/horovod/horovod">Horovod</a>, <a href="https://www.open-mpi.org/">OpenMPI</a>, and <a href="https://github.com/ray-project/ray">Ray</a>.
 					</li>
 					<li class="list-group-item">
 						<strong>Programming Lead at <a href="http://www.polymorphicgames.com/">Polymorphic Game Studio</a></strong>: 
 						Designing, programming, and testing a mobile game for Android and iOS using C# and the <a href="https://unity.com/">Unity Engine</a>.
-					</li>
-					<li class="list-group-item">
-						<strong>Deli clerk at South Lake Tahoe Grocery Outlet</strong>: Unpacking and sorting goods.
 					</li>
 				</ul>
 
@@ -90,45 +87,66 @@
 				</ul>
 
 				<h2 style="padding-top:70px" class="text-center" id="skills">Skills</h2>
-				<div style="padding-bottom:70px" class="container">
-					<div class="row">
-						<div class="col-lg-5 card card-body bg-dark mb-3">
-							<h5 style="color:#FFFFFF" class="card-title">
-							Programming Languages
-							</h5>
-							<ul class="list-group card-text">
-								<li class="list-group-item">Java</li>
-								<li class="list-group-item">C</li>
-								<li class="list-group-item">C++</li>
-								<li class="list-group-item">C#</li>
-								<li class="list-group-item">Python</li>
-								<li class="list-group-item">Javascript/Typescript</li>
-								<li class="list-group-item">Bash Scripting</li>
-								<li class="list-group-item">Objective-C</li>
-								<li class="list-group-item">HTML/CSS</li>
-							</ul>
+				<div class="container">
+					<div class="row row-cols-md-3 no-gutters">
+						<div class="col">
+							<div class="card card-body bg-dark m-1 p-2">
+								<h5 style="color:#FFFFFF" class="card-title">
+								Languages
+								</h5>
+								<ul class="list-group card-text">
+									<li class="list-group-item">Java/Kotlin</li>
+									<li class="list-group-item">C/Assembly</li>
+									<li class="list-group-item">C++</li>
+									<li class="list-group-item">C#</li>
+									<li class="list-group-item">Python</li>
+									<li class="list-group-item">Javascript/Typescript</li>
+									<li class="list-group-item">Bash/Shell/Perl</li>
+									<li class="list-group-item">Julia</li>
+									<li class="list-group-item">Go</li>
+								</ul>
+							</div>
 						</div>
-						<div class="col-lg-2"></div>
-						<div class="col-lg-5 card card-body bg-dark mb-3">
-							<h5 style="color:#FFFFFF" class="card-title">
-							Libraries & Tools
-							</h5>
-							<ul class="list-group card-text">
-								<li class="list-group-item">PyTorch</li>
-								<li class="list-group-item">Tensorflow/Keras</li>
-								<li class="list-group-item">NumPy</li>
-								<li class="list-group-item">MPI</li>
-								<li class="list-group-item">Linux/WSL</li>
-								<li class="list-group-item">Git/GitHub/GitLab</li>
-								<li class="list-group-item">Unity</li>
-								<li class="list-group-item">Android Development</li>
-								<li class="list-group-item">Bootstrap</li>
-							</ul>
+						<div class="col">
+							<div class="card card-body bg-dark m-1 p-2">
+								<h5 style="color:#FFFFFF" class="card-title">
+								Libraries & Tools
+								</h5>
+								<ul class="list-group card-text">
+									<li class="list-group-item">PyTorch</li>
+									<li class="list-group-item">Tensorflow/Keras</li>
+									<li class="list-group-item">NumPy &amp; Pandas</li>
+									<li class="list-group-item">MPI &amp; Horovod</li>
+									<li class="list-group-item">Docker/Singularity</li>
+									<li class="list-group-item">Git/GitHub/GitLab</li>
+									<li class="list-group-item">Make/CMake</li>
+									<li class="list-group-item">Flex/Bison</li>
+									<li class="list-group-item">NGINX</li>
+								</ul>
+							</div>
+						</div>
+						<div class="col">
+							<div class="card card-body bg-dark m-1 p-2">
+								<h5 style="color:#FFFFFF" class="card-title">
+								Platforms
+								</h5>
+								<ul class="list-group card-text">
+									<li class="list-group-item">Arch Linux</li>
+									<li class="list-group-item">CentOS/Rocky Linux</li>
+									<li class="list-group-item">Ubuntu</li>
+									<li class="list-group-item">Windows</li>
+									<li class="list-group-item">Web</li>
+									<li class="list-group-item">Virtualization</li>
+									<li class="list-group-item">Android</li>
+									<li class="list-group-item">Unity</li>
+									<li class="list-group-item">FreeRTOS</li>
+								</ul>
+							</div>
 						</div>
 					</div>
 				</div>
-				<h2 style="padding-top:70px" class="text-center" id="papers">Publications</h2>
-				<ul class="list-group">
+				<h2 style="padding-top:70px;" class="text-center" id="papers">Publications</h2>
+				<ul class="list-group" style="margin-bottom:70px;">
 					<li class="list-group-item">
 						<strong>Obtaining High-purity Gamma Spectra using NaI Scintillators</strong>
 						<span class="badge badge-info">in progress</span>
