--- a/index.html
+++ b/index.html
@@ -41,13 +41,21 @@
 					</div>
 					<div style="padding-left:10px" class="media-body">
 						<h1 class="text-center">Welcome!</h1>
+						<br><br>
 						<p>
-							My name is Graeme Holliday. I just graduated from the <a href="http://www.uidaho.edu">University of Idaho</a> with a bachelor's in  Computer Science with minors in Mathematics and Spanish. <span class="badge badge-info">conversant</span>
+							Howdy! I'm a software engineer and machine learning aficionado from Idaho Falls, ID.
 							<br><br>
 							This website is meant to be a resource for anyone looking to get a quick sense of who I am and what I am capable of. You can also check out my server at <a href="https://graemeholliday.com">graemeholliday.com</a>!
 						</p>
 					</div>
 				</div>
+				<h2 style="padding-top:70px" class="text-center" id="education">Education</h2>
+				<ul class="list-group">
+					<li class="list-group-item">
+						<strong>B.S. in Computer Science at the <a href="http://uidaho.edu">University of Idaho</a></strong>: Minors in Mathematics and Spanish. <span class="badge badge-success">2021</span> <span class="badge badge-info">cum laude</span>
+					</li>
+				</ul>
+
 				<h2 style="padding-top:70px" class="text-center" id="experience">Experience</h2>
 				<ul class="list-group">
 					<li class="list-group-item">
@@ -57,13 +65,11 @@
 					</li>
 					<li class="list-group-item">
 						<strong>Intern at <a href="http://inl.gov/">Idaho National Laboratory</a></strong>: 
-						Using <a href="https://pytorch.org/">PyTorch</a> and <a href="https://www.tensorflow.org/">Tensorflow</a> to improve upon existing HPC job scheduling algorithms with deep reinforcement learning.
-						<br>An actor-critic model was trained through decentralized distributed proximal policy optimization.
-						<br>Among other tools, I used <a href="https://github.com/horovod/horovod">Horovod</a>, <a href="https://www.open-mpi.org/">OpenMPI</a>, and <a href="https://github.com/ray-project/ray">Ray</a>.
+						Improving upon existing, heuristic HPC job scheduling algorithms with deep reinforcement learning; scaling up previous work with distributed training frameworks.
 					</li>
 					<li class="list-group-item">
 						<strong>Programming Lead at <a href="http://www.polymorphicgames.com/">Polymorphic Game Studio</a></strong>: 
-						Designing, programming, and testing a mobile game for Android and iOS using C# and the <a href="https://unity.com/">Unity Engine</a>.
+						Designing, programming, and testing a mobile game for Android and iOS using C# and Unity.
 					</li>
 				</ul>
 
@@ -82,7 +88,7 @@
 						<strong>C# and Unity game design</strong>: <a href="http://www.polymorphicgames.com">Project Spectre</a> <span class="badge badge-info">in progress</span>
 					</li>
 					<li class="list-group-item">
-						<strong>Web design using HTML/CSS, Bootstrap, and Javascript</strong>: This website!
+						<strong>Web design using Bootstrap</strong>: This website!
 					</li>
 				</ul>
 
@@ -114,9 +120,9 @@
 								</h5>
 								<ul class="list-group card-text">
 									<li class="list-group-item">PyTorch</li>
-									<li class="list-group-item">Tensorflow/Keras</li>
-									<li class="list-group-item">NumPy &amp; Pandas</li>
-									<li class="list-group-item">MPI &amp; Horovod</li>
+									<li class="list-group-item">TensorFlow/Keras</li>
+									<li class="list-group-item">NumPy/Pandas</li>
+									<li class="list-group-item">MPI/Horovod/Ray</li>
 									<li class="list-group-item">Docker/Singularity</li>
 									<li class="list-group-item">Git/GitHub/GitLab</li>
 									<li class="list-group-item">Make/CMake</li>
