--- a/index.html
+++ b/index.html
@@ -21,11 +21,6 @@
 						<img src="github.png" alt="GitHub"/>
 					</a>
 				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="http://www.linkedin.com/in/graeme-holliday-932673165/">
-						<img src="linkedin.png" alt="LinkedIn"/>
-					</a>
-				</li>
 			</ul>
 		</div>
 	</nav>
@@ -45,7 +40,7 @@
 						<p>
 							Howdy! I'm a software engineer and machine learning aficionado from Idaho Falls, ID.
 							<br><br>
-							This website is meant to be a resource for anyone looking to get a quick sense of who I am and what I am capable of. You can also check out my server at <a href="https://graemeholliday.com">graemeholliday.com</a>!
+							This website is meant to be a resource for anyone looking to get a quick sense of who I am and what I am capable of.
 						</p>
 					</div>
 				</div>
@@ -85,7 +80,7 @@
 						<strong>Java application design</strong>: <a href="http://github.com/Graeme22/atlantis-mod">atlantis-mod</a>
 					</li>
 					<li class="list-group-item">
-						<strong>C# and Unity game design</strong>: <a href="http://www.polymorphicgames.com">Project Spectre</a> <span class="badge badge-info">in progress</span>
+						<strong>C# and Unity game design</strong>: <a href="http://www.polymorphicgames.com">Project Spectre</a> <span class="badge badge-warning">in progress</span>
 					</li>
 					<li class="list-group-item">
 						<strong>Web design using Bootstrap</strong>: This website!
@@ -155,15 +150,15 @@
 				<ul class="list-group" style="margin-bottom:70px;">
 					<li class="list-group-item">
 						<strong>Obtaining High-purity Gamma Spectra using NaI Scintillators</strong>
-						<span class="badge badge-info">in progress</span>
+						<span class="badge badge-warning">in progress</span>
 					</li>
 					<li class="list-group-item">
 						<strong>Far-Edge Cluster Computing: Gamma Spectroscopy on SpaceBorne 2</strong>
-						<span class="badge badge-info">in progress</span>
+						<span class="badge badge-warning">in progress</span>
 					</li>
 					<li class="list-group-item">
 						<strong>Deep Reinforcement Learning for Superior Cluster Job Scheduling</strong>
-						<span class="badge badge-info">in progress</span>
+						<span class="badge badge-warning">in progress</span>
 					</li>
 				</ul>
 			</div>
