--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 			<div class="col-lg-8">
 				<div style="padding-top:70px" class="media jumbotron">
 					<div class="media-left d-sm-none d-md-block d-none">
-						<img class="media-object" src="me.jpg"/>
+						<img class="media-object" src="Fall2020 Profile.jpg"/>
 					</div>
 					<div style="padding-left:10px" class="media-body">
 						<h1 class="text-center">Welcome!</h1>
