--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
 	<nav class="navbar sticky-top navbar-expand-md navbar-light bg-light">
 		<div class="mx-auto order-0">
-			<div class="navbar-brand mx-auto">GRAEME HOLLIDAY</div>
+			<div class="navbar-brand mx-auto">David Bush</div>
 		</div>
 		<div class="navbar-collapse collapse w-100 order-3 dual-collapse2" id="navbarSupportedContent">
 			<ul class="navbar-nav ml-auto">
@@ -38,7 +38,8 @@
 						<h1 class="text-center">Welcome!</h1>
 						<br><br>
 						<p>
-							Howdy! I'm a software engineer and machine learning aficionado from Idaho Falls, ID.
+							Hello! I'm a currently a Computer Science student at University of Idaho. 
+							Test.
 							<br><br>
 							This website is meant to be a resource for anyone looking to get a quick sense of who I am and what I am capable of.
 						</p>
