--- a/index.html
+++ b/index.html
@@ -38,10 +38,12 @@
 						<h1 class="text-center">Welcome!</h1>
 						<br><br>
 						<p>
-							Hello! I'm a currently a Computer Science student at University of Idaho. 
-							Test.
+							Hello! My name is David and I'm a currently a senior Computer Science student at University of Idaho. 
+							This website is meant to be resource for anyone that is trying to get a sense of who I am and what I'm  capable of.
 							<br><br>
-							This website is meant to be a resource for anyone looking to get a quick sense of who I am and what I am capable of.
+							I'm passionate working on and creating solutions to real life problems using technology.
+							I enjoy an environment that constantly challenges my abilities and allows me to grow.
+							I have strong interest in space exploration and other futuristic technologies.
 						</p>
 					</div>
 				</div>
