--- a/index.html
+++ b/index.html
@@ -38,19 +38,19 @@
 						<h1 class="text-center">Welcome!</h1>
 						<br><br>
 						<p>
-							Hello! My name is David and I'm a currently a senior Computer Science student at University of Idaho. 
-							This website is meant to be resource for anyone that is trying to get a sense of who I am and what I'm  capable of.
+							Hello! My name is David and I'm a currently a senior C.S. student at the University of Idaho. 
+							This website is meant to be resource for anyone that is trying to get know me better and a highlight of my experiences.
 							<br><br>
 							I'm passionate working on and creating solutions to real life problems using technology.
 							I enjoy an environment that constantly challenges my abilities and allows me to grow.
-							I have strong interest in space exploration and other futuristic technologies.
+							I have a strong interest in space exploration and other futuristic technologies.
 						</p>
 					</div>
 				</div>
 				<h2 style="padding-top:70px" class="text-center" id="education">Education</h2>
 				<ul class="list-group">
 					<li class="list-group-item">
-						<strong>B.S. in Computer Science at the <a href="http://uidaho.edu">University of Idaho</a></strong>: Minors in Mathematics and Spanish. <span class="badge badge-success">2021</span> <span class="badge badge-info">cum laude</span>
+						<strong>Pursuing B.S. in Computer Science at the <a href="http://uidaho.edu">University of Idaho</a>
 					</li>
 				</ul>
 
