--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
-    <title>Graeme Holliday</title>
+    <title>David Bush</title>
   </head>
   <body>
 	<nav class="navbar sticky-top navbar-expand-md navbar-light bg-light">
@@ -17,7 +17,7 @@
 		<div class="navbar-collapse collapse w-100 order-3 dual-collapse2" id="navbarSupportedContent">
 			<ul class="navbar-nav ml-auto">
 				<li class="nav-item">
-					<a class="nav-link" href="http://www.github.com/graeme22">
+					<a class="nav-link" href="http://www.github.com/cyberbush">
 						<img src="github.png" alt="GitHub"/>
 					</a>
 				</li>
@@ -39,7 +39,7 @@
 						<br><br>
 						<p>
 							Hello! My name is David and I'm a currently a senior C.S. student at the University of Idaho. 
-							This website is meant to be resource for anyone that is trying to get know me better and a highlight of my experiences.
+							This website is meant to be a resource for anyone that is trying to get to know me better and a highlight of my experiences.
 							<br><br>
 							I'm passionate working on and creating solutions to real life problems using technology.
 							I enjoy an environment that constantly challenges my abilities and allows me to grow.
@@ -51,23 +51,6 @@
 				<ul class="list-group">
 					<li class="list-group-item">
 						<strong>Pursuing B.S. in Computer Science at the <a href="http://uidaho.edu">University of Idaho</a>
-					</li>
-				</ul>
-
-				<h2 style="padding-top:70px" class="text-center" id="experience">Experience</h2>
-				<ul class="list-group">
-					<li class="list-group-item">
-						<strong>Intern at <a href="http://inl.gov/">Idaho National Laboratory</a></strong>:
-						Designing neural network architectures to classify and quantify radioactive isotopes using a variety of models; optimizing those models for low-power inference; tackling existing barriers to effective automatic gamma spectroscopy.
-						<span class="badge badge-info">current</span>
-					</li>
-					<li class="list-group-item">
-						<strong>Intern at <a href="http://inl.gov/">Idaho National Laboratory</a></strong>: 
-						Improving upon existing, heuristic HPC job scheduling algorithms with deep reinforcement learning; scaling up previous work with distributed training frameworks.
-					</li>
-					<li class="list-group-item">
-						<strong>Programming Lead at <a href="http://www.polymorphicgames.com/">Polymorphic Game Studio</a></strong>: 
-						Designing, programming, and testing a mobile game for Android and iOS using C# and Unity.
 					</li>
 				</ul>
 
@@ -89,6 +72,24 @@
 						<strong>Web design using Bootstrap</strong>: This website!
 					</li>
 				</ul>
+
+				<h2 style="padding-top:70px" class="text-center" id="experience">Experience</h2>
+				<ul class="list-group">
+					<li class="list-group-item">
+						<strong>Intern at <a href="http://inl.gov/">Idaho National Laboratory</a></strong>:
+						Designing neural network architectures to classify and quantify radioactive isotopes using a variety of models; optimizing those models for low-power inference; tackling existing barriers to effective automatic gamma spectroscopy.
+						<span class="badge badge-info">current</span>
+					</li>
+					<li class="list-group-item">
+						<strong>Intern at <a href="http://inl.gov/">Idaho National Laboratory</a></strong>: 
+						Improving upon existing, heuristic HPC job scheduling algorithms with deep reinforcement learning; scaling up previous work with distributed training frameworks.
+					</li>
+					<li class="list-group-item">
+						<strong>Programming Lead at <a href="http://www.polymorphicgames.com/">Polymorphic Game Studio</a></strong>: 
+						Designing, programming, and testing a mobile game for Android and iOS using C# and Unity.
+					</li>
+				</ul>
+
 
 				<h2 style="padding-top:70px" class="text-center" id="skills">Skills</h2>
 				<div class="container">
