--- a/index.html
+++ b/index.html
@@ -54,39 +54,18 @@
 					</li>
 				</ul>
 
-				<h2 style="padding-top:70px" class="text-center" id="work">Sample Work</h2>
+				<h2 style="padding-top:70px" class="text-center" id="work">Projects</h2>
 				<ul class="list-group">
 					<li class="list-group-item">
-						<strong>Distillation training for vision transformer models</strong>: <a href="http://github.com/Graeme22/DistillableVisionTransformer">distillable-vision-transformer</a>
-					</li>
-					<li class="list-group-item">
-						<strong>Custom compiler for a C-like language</strong>: <a href="http://github.com/Graeme22/cminus">cminus</a>
-					</li>
-					<li class="list-group-item">
-						<strong>Java application design</strong>: <a href="http://github.com/Graeme22/atlantis-mod">atlantis-mod</a>
-					</li>
-					<li class="list-group-item">
-						<strong>C# and Unity game design</strong>: <a href="http://www.polymorphicgames.com">Project Spectre</a> <span class="badge badge-warning">in progress</span>
-					</li>
-					<li class="list-group-item">
-						<strong>Web design using Bootstrap</strong>: This website!
+						<strong>Implemented Connect4 AI with an adversarial search </strong>: <a href="https://github.com/cyberbush/Connect4-with-AI">Connect4-with-AI</a>
 					</li>
 				</ul>
 
 				<h2 style="padding-top:70px" class="text-center" id="experience">Experience</h2>
 				<ul class="list-group">
 					<li class="list-group-item">
-						<strong>Intern at <a href="http://inl.gov/">Idaho National Laboratory</a></strong>:
-						Designing neural network architectures to classify and quantify radioactive isotopes using a variety of models; optimizing those models for low-power inference; tackling existing barriers to effective automatic gamma spectroscopy.
-						<span class="badge badge-info">current</span>
-					</li>
-					<li class="list-group-item">
-						<strong>Intern at <a href="http://inl.gov/">Idaho National Laboratory</a></strong>: 
-						Improving upon existing, heuristic HPC job scheduling algorithms with deep reinforcement learning; scaling up previous work with distributed training frameworks.
-					</li>
-					<li class="list-group-item">
-						<strong>Programming Lead at <a href="http://www.polymorphicgames.com/">Polymorphic Game Studio</a></strong>: 
-						Designing, programming, and testing a mobile game for Android and iOS using C# and Unity.
+						<strong>Computer technician at <a href="http://inl.gov/">University of Idaho</a></strong>:
+						Patched software and installed new versions to eliminate security problems and protect data.  Broke down and evaluated user problems, using personal expertise, and probing questions.
 					</li>
 				</ul>
 
