--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 				<h2 style="padding-top:70px" class="text-center" id="work">Projects</h2>
 				<ul class="list-group">
 					<li class="list-group-item">
-						<strong>Implemented Connect4 AI with an adversarial search </strong>: <a href="https://github.com/cyberbush/Connect4-with-AI">Connect4-with-AI</a>
+						 Implemented a Connect4 AI that utilizes an adversarial search: <a href="https://github.com/cyberbush/Connect4-with-AI">Connect4-with-AI</a>
 					</li>
 				</ul>
 
