--- a/index.html
+++ b/index.html
@@ -79,15 +79,13 @@
 								Languages
 								</h5>
 								<ul class="list-group card-text">
-									<li class="list-group-item">Java/Kotlin</li>
 									<li class="list-group-item">C/Assembly</li>
 									<li class="list-group-item">C++</li>
-									<li class="list-group-item">C#</li>
 									<li class="list-group-item">Python</li>
+									<li class="list-group-item">Java</li>									
 									<li class="list-group-item">Javascript/Typescript</li>
+									<li class="list-group-item">Prolog</li>
 									<li class="list-group-item">Bash/Shell/Perl</li>
-									<li class="list-group-item">Julia</li>
-									<li class="list-group-item">Go</li>
 								</ul>
 							</div>
 						</div>
