--- a/index.html
+++ b/index.html
@@ -98,12 +98,9 @@
 									<li class="list-group-item">PyTorch</li>
 									<li class="list-group-item">TensorFlow/Keras</li>
 									<li class="list-group-item">NumPy/Pandas</li>
-									<li class="list-group-item">MPI/Horovod/Ray</li>
-									<li class="list-group-item">Docker/Singularity</li>
 									<li class="list-group-item">Git/GitHub/GitLab</li>
-									<li class="list-group-item">Make/CMake</li>
+									<li class="list-group-item">LaTeX</li>
 									<li class="list-group-item">Flex/Bison</li>
-									<li class="list-group-item">NGINX</li>
 								</ul>
 							</div>
 						</div>
