--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 						<br><br>
 						<p>
 							Hello! My name is David and I'm a currently a senior C.S. student at the University of Idaho. 
-							This website is meant to be a resource for anyone that is trying to get to know me better and a highlight of my experiences.
+							This website is meant to be a resource for anyone that is trying to get to know me better and a highlight of my work.
 							<br><br>
 							I'm passionate working on and creating solutions to real life problems using technology.
 							I enjoy an environment that constantly challenges my abilities and allows me to grow.
@@ -50,14 +50,26 @@
 				<h2 style="padding-top:70px" class="text-center" id="education">Education</h2>
 				<ul class="list-group">
 					<li class="list-group-item">
-						<strong>Pursuing B.S. in Computer Science at the <a href="http://uidaho.edu">University of Idaho</a>
+						<strong>B.S. in Computer Science at the <a href="http://uidaho.edu">University of Idaho</a>, Expected Graduation: Fall 2022 </strong>
+					</li>
+					<li class="list-group-item">
+						<strong> High School Diploma from Skyline High School</strong> <span class="badge badge-success">2017</span> <span class="badge badge-info">cum laude</span>
 					</li>
 				</ul>
 
 				<h2 style="padding-top:70px" class="text-center" id="work">Projects</h2>
 				<ul class="list-group">
 					<li class="list-group-item">
-						 Implemented a Connect4 AI that utilizes an adversarial search: <a href="https://github.com/cyberbush/Connect4-with-AI">Connect4-with-AI</a>
+						Connect4 AI in Python with a Min-Max search algorithm: <a href="https://github.com/cyberbush/Connect4-with-AI">Connect4-with-AI</a>
+					</li>
+					<li class="list-group-item">
+						Concurrent image processing in C: <a href="https://github.com/cyberbush/Fork-Image">Fork-Image</a>
+					</li>
+					<li class="list-group-item">
+						Custom parser in C: <a href="https://github.com/cyberbush/Parser">Parser</a>
+					</li>
+					<li class="list-group-item">
+						<strong>Web design using Bootstrap</strong>: This website!
 					</li>
 				</ul>
 
