--- a/index.html
+++ b/index.html
@@ -50,23 +50,26 @@
 				<h2 style="padding-top:70px" class="text-center" id="education">Education</h2>
 				<ul class="list-group">
 					<li class="list-group-item">
-						<strong>B.S. in Computer Science at the <a href="http://uidaho.edu">University of Idaho</a>, Expected Graduation: Fall 2022 </strong>
+						<strong>B.S. in Computer Science at the <a href="http://uidaho.edu">University of Idaho</a>. </strong> <span class="badge badge-warning">Expected: Fall 2022</span>
 					</li>
 					<li class="list-group-item">
-						<strong> High School Diploma from Skyline High School</strong> <span class="badge badge-success">2017</span> <span class="badge badge-info">cum laude</span>
+						<strong> High School Diploma from Skyline High School.</strong> <span class="badge badge-success">2017</span> <span class="badge badge-info">cum laude</span>
 					</li>
 				</ul>
 
 				<h2 style="padding-top:70px" class="text-center" id="work">Projects</h2>
 				<ul class="list-group">
 					<li class="list-group-item">
-						Connect4 AI in Python with a Min-Max search algorithm: <a href="https://github.com/cyberbush/Connect4-with-AI">Connect4-with-AI</a>
+						<strong>Connect4 AI in Python using an adversarial search: </strong><a href="https://github.com/cyberbush/Connect4-with-AI">Connect4-with-AI</a>
 					</li>
 					<li class="list-group-item">
-						Concurrent image processing in C: <a href="https://github.com/cyberbush/Fork-Image">Fork-Image</a>
+						<strong>Custom parser in C: </strong><a href="https://github.com/cyberbush/Parser">Parser</a>
 					</li>
 					<li class="list-group-item">
-						Custom parser in C: <a href="https://github.com/cyberbush/Parser">Parser</a>
+						<strong>Concurrent image processing in C: </strong><a href="https://github.com/cyberbush/Fork-Image">Fork-Image</a>
+					</li>
+					<li class="list-group-item">
+						<strong>Archiver utility with Shell: </strong><a href="https://github.com/cyberbush/Tar-Archiver-Script">Tar-Archiver-Script</a>
 					</li>
 					<li class="list-group-item">
 						<strong>Web design using Bootstrap</strong>: This website!
@@ -96,7 +99,7 @@
 									<li class="list-group-item">Python</li>
 									<li class="list-group-item">Java</li>									
 									<li class="list-group-item">Javascript/Typescript</li>
-									<li class="list-group-item">Prolog</li>
+									<li class="list-group-item">Prolog/ML</li>
 									<li class="list-group-item">Bash/Shell/Perl</li>
 								</ul>
 							</div>
@@ -112,6 +115,7 @@
 									<li class="list-group-item">NumPy/Pandas</li>
 									<li class="list-group-item">Git/GitHub/GitLab</li>
 									<li class="list-group-item">LaTeX</li>
+									<li class="list-group-item">Make/CMake</li>
 									<li class="list-group-item">Flex/Bison</li>
 								</ul>
 							</div>
@@ -122,7 +126,6 @@
 								Platforms
 								</h5>
 								<ul class="list-group card-text">
-									<li class="list-group-item">Arch Linux</li>
 									<li class="list-group-item">CentOS/Rocky Linux</li>
 									<li class="list-group-item">Ubuntu</li>
 									<li class="list-group-item">Windows</li>
@@ -130,28 +133,11 @@
 									<li class="list-group-item">Virtualization</li>
 									<li class="list-group-item">Android</li>
 									<li class="list-group-item">Unity</li>
-									<li class="list-group-item">FreeRTOS</li>
 								</ul>
 							</div>
 						</div>
 					</div>
 				</div>
-				<h2 style="padding-top:70px;" class="text-center" id="papers">Publications</h2>
-				<ul class="list-group" style="margin-bottom:70px;">
-					<li class="list-group-item">
-						<strong>Obtaining High-purity Gamma Spectra using NaI Scintillators</strong>
-						<span class="badge badge-warning">in progress</span>
-					</li>
-					<li class="list-group-item">
-						<strong>Far-Edge Cluster Computing: Gamma Spectroscopy on SpaceBorne 2</strong>
-						<span class="badge badge-warning">in progress</span>
-					</li>
-					<li class="list-group-item">
-						<strong>Deep Reinforcement Learning for Superior Cluster Job Scheduling</strong>
-						<span class="badge badge-warning">in progress</span>
-					</li>
-				</ul>
-			</div>
 		</div>
 	</div>
 
