--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 						<strong>Archiver utility with Shell: </strong><a href="https://github.com/cyberbush/Tar-Archiver-Script">Tar-Archiver-Script</a>
 					</li>
 					<li class="list-group-item">
-						<strong>Web design using Bootstrap</strong>: This website!
+						<strong>Web design</strong>: This website!
 					</li>
 				</ul>
 
@@ -131,7 +131,7 @@
 									<li class="list-group-item">Windows</li>
 									<li class="list-group-item">Web</li>
 									<li class="list-group-item">Virtualization</li>
-									<li class="list-group-item">Android</li>
+									<li class="list-group-item">Qt</li>
 									<li class="list-group-item">Unity</li>
 								</ul>
 							</div>
