--- a/index.html
+++ b/index.html
@@ -94,13 +94,12 @@
 								Languages
 								</h5>
 								<ul class="list-group card-text">
-									<li class="list-group-item">C/Assembly</li>
-									<li class="list-group-item">C++</li>
+									<li class="list-group-item">C/C++</li>
 									<li class="list-group-item">Python</li>
-									<li class="list-group-item">Java</li>									
-									<li class="list-group-item">Javascript/Typescript</li>
+									<li class="list-group-item">Java/Javascript</li>									
 									<li class="list-group-item">Prolog/ML</li>
 									<li class="list-group-item">Bash/Shell/Perl</li>
+									<li class="list-group-item">HTML</li>
 								</ul>
 							</div>
 						</div>
@@ -110,14 +109,12 @@
 								Libraries & Tools
 								</h5>
 								<ul class="list-group card-text">
-									<li class="list-group-item">PyTorch</li>
-									<li class="list-group-item">TensorFlow/Keras</li>
-									<li class="list-group-item">NumPy/Pandas</li>
+									<li class="list-group-item">Qt</li>
 									<li class="list-group-item">Git/GitHub/GitLab</li>
 									<li class="list-group-item">LaTeX</li>
 									<li class="list-group-item">Make/CMake</li>
 									<li class="list-group-item">Flex/Bison</li>
-								</ul>
+									<li class="list-group-item">NumPy/Pandas</li>								</ul>
 							</div>
 						</div>
 						<div class="col">
@@ -131,7 +128,6 @@
 									<li class="list-group-item">Windows</li>
 									<li class="list-group-item">Web</li>
 									<li class="list-group-item">Virtualization</li>
-									<li class="list-group-item">Qt</li>
 									<li class="list-group-item">Unity</li>
 								</ul>
 							</div>
