--- a/index.html
+++ b/index.html
@@ -63,10 +63,13 @@
 						<strong>Connect4 AI in Python using an adversarial search: </strong><a href="https://github.com/cyberbush/Connect4-with-AI">Connect4-with-AI</a>
 					</li>
 					<li class="list-group-item">
-						<strong>Custom parser in C: </strong><a href="https://github.com/cyberbush/Parser">Parser</a>
+						<strong>Concurrent image processing in C: </strong><a href="https://github.com/cyberbush/Fork-Image">Fork-Image</a>
 					</li>
 					<li class="list-group-item">
-						<strong>Concurrent image processing in C: </strong><a href="https://github.com/cyberbush/Fork-Image">Fork-Image</a>
+						<strong>Pong game in Unity: </strong><a href="https://github.com/cyberbush/Pong_Unity">Pong</a>
+					</li>
+					<li class="list-group-item">
+						<strong>Custom parser in C: </strong><a href="https://github.com/cyberbush/Parser">Parser</a>
 					</li>
 					<li class="list-group-item">
 						<strong>Archiver utility with Shell: </strong><a href="https://github.com/cyberbush/Tar-Archiver-Script">Tar-Archiver-Script</a>
@@ -78,6 +81,11 @@
 
 				<h2 style="padding-top:70px" class="text-center" id="experience">Experience</h2>
 				<ul class="list-group">
+					<li class="list-group-item">
+						<strong>Computer Science tutor for <a href="http://inl.gov/">University of Idaho</a></strong>:
+						Helped CS students with programming assignments by asking probing questions, checking error messages and
+						reading through code. Helped students study and explained fundamental CS concepts. 
+					</li>
 					<li class="list-group-item">
 						<strong>Computer technician at <a href="http://inl.gov/">University of Idaho</a></strong>:
 						Patched software and installed new versions to eliminate security problems and protect data.  Broke down and evaluated user problems, using personal expertise, and probing questions.
